// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLinkButton renders as button element 1`] = `
<DocumentFragment>
  <mock-link
    aria-expanded="true"
    aria-label="some title"
    classname="navLinkButton some class name"
    title="some title"
  />
</DocumentFragment>
`;

exports[`NavLinkButton renders with href set 1`] = `
<DocumentFragment>
  <mock-link
    aria-expanded="true"
    aria-label="some title"
    classname="navLinkButton some class name"
    href="#"
    title="some title"
  />
</DocumentFragment>
`;

exports[`NavLinkButton renders with the proper aria-label 1`] = `
<DocumentFragment>
  <mock-link
    aria-expanded="true"
    aria-label="some title (current page)"
    classname="navLinkButton some class name"
    title="some title"
  />
</DocumentFragment>
`;

exports[`NavLinkButton renders with using name instead of title 1`] = `
<DocumentFragment>
  <mock-link
    aria-expanded="true"
    aria-label="some title"
    classname="navLinkButton some class name"
    title="some title"
  />
</DocumentFragment>
`;
